style.css
:root {
    --primary: #000;
    --secondary: #666;
    --bg: #fff;
    --border: #eee;
    --accent: #ff6b6b;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: "Geist Mono", monospace;
    line-height: 1.6;
    color: var(--primary);
    background: var(--bg);
    padding: 0rem 2rem 0rem 2rem;
    max-width: 750px;
    margin: 0 auto;
}

.cursor {
    display: inline-block;
    width: 4px;
    height: 1em;
    background: currentColor;
    margin-left: 2px;
    animation: blink 1s infinite;
}

@keyframes blink {

    0%,
    100% {
        opacity: 1;
    }

    50% {
        opacity: 0;
    }
}

.header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 1rem 1rem !important;
    border-bottom: 1px solid var(--border);
    margin-bottom: 2rem;
    background: #fbfbfb;
    margin-top: 0em !important;
    position: sticky;
    top: 0;
    background: var(--bg);
    z-index: 100;
    padding: 1rem 0;
    border: 1px solid var(--border);
    border-radius: 5px;
}

code {
    background: #000;
    color: #03df07;
    padding: 0.25rem 0.5rem;
    border-radius: 4px;
}


.logo {
    background: var(--primary);
    color: white;
    padding: 0.25rem 0.5rem;
    font-weight: bold;
    font-size: 1rem;
    border-radius: 3px;
}

.nav {
    display: flex;
    gap: 1.5rem;
    font-size: 1.1rem;
}

.nav a {
    text-decoration: none;
    color: var(--primary);
    display: flex;
    align-items: center;
    gap: 0.5rem;
}

.nav a svg {
    width: 16px;
    height: 16px;
}

.hero {
    margin-bottom: 2rem;
}

.name {
    font-size: 2rem;
    font-weight: bold;
    margin-bottom: 0.5rem;
    display: flex;
    align-items: center;
    gap: 0.5rem;
}

.title {
    background: var(--primary);
    color: rgb(255, 255, 255);
    padding: 0.25rem 0.65rem;
    font-size: 0.9rem;
    font-weight: 600;
    border-radius: 5px;
    /* font-family: monospace;
    white-space: pre; */
    /* min-width: 155px !important; */
}

.bio {
    margin: 1rem 0;
    font-size: 1.15rem;
}

.section {
    margin: 2rem 0;
}

.section-title {
    font-size: 1.65rem;
    font-weight: bold;
    margin-bottom: 1rem;
    position: relative;
}

/* .section-title::after {
    content: '_';
    position: absolute;
    left: 5%;
    margin-left: 0.25rem;
} */

.project {
    margin: 1rem 0;
    padding: 0.5rem 1.25rem;
    border: 1px solid var(--border);
    border-radius: 5px;
}

.project-title {
    font-weight: bold;
    font-size: 1.2rem;
}

.project-title a {
    text-decoration: none;
    color: var(--primary);
}

.project-meta {
    color: var(--secondary);
    font-size: 1.05rem;
    margin: 0.55rem 0rem;
}


.tag-group {
    display: flex;
    flex-wrap: wrap;
    gap: 0.4rem;
    /* handles both row and column spacing */
    margin-bottom: 0.5rem;
}

.tag {
    background: var(--primary);
    color: var(--bg);
    padding: 0.25rem 0.5rem;
    font-size: 0.75rem;
    font-weight: 600;
    border-radius: 5px;
}

.stack-item {
    display: flex;
    align-items: center;
    gap: 0.5rem;
    margin: 0.5rem 0;
    font-size: 1.1rem;
}

.stack-icons {
    width: 25px;
    height: auto;
}

.signature {
    margin-top: 3rem;
    text-align: center;
    border: 1px solid var(--border);
    border-radius: 5px;
    margin-bottom: 0em;
}

.signature-text {
    font-size: 1rem;
    color: var(--secondary);
    margin-top: 0.5rem;
    margin-bottom: 0.5rem;
}

.resume-icon {
    width: 15%;
    height: auto;
}

@media (max-width: 768px) {
    body {
        padding: 1rem;
    }

    .header {
        flex-direction: column;
        gap: 1rem;
    }

    .nav {
        flex-wrap: wrap;
        justify-content: center;
    }

    .nav a:last-child {
        margin-top: -15px;
    }
}

